unpackaged/main/default/objects/Integration_Log__c/fields/Json_Response__c.field-meta.xml
<CustomField>
    <fullName>Json_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Json Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>