unpackaged/main/default/objects/Integration_Log__c/fields/Pay_Load__c.field-meta.xml
<CustomField>
    <fullName>Pay_Load__c</fullName>
    <description>Text Dump of the payload that is a part of the web service transaction.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Load</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>