unpackaged/main/default/objects/Integration_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>The name of the process (if required) which results in a web service invocation (in bound or outbound)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>