unpackaged/main/default/objects/Integration_Log__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Name  of the source system that is making the inbound web service call to salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>