unpackaged/main/default/objects/Integration_Log__c/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <description>The name of the target system for any outbound calls from salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>