unpackaged/main/default/objects/Integration_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>The unique Id for every web service transaction with salesforce. For any inbound web service calls into salesforce , the Id should be provided by the external system. For any out bound calls from salesforce , this should be provided from salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>