unpackaged/main/default/objects/Integration_Log__c/recordTypes/INBOUND.recordType-meta.xml
<RecordType>
    <fullName>INBOUND</fullName>
    <active>true</active>
    <description>Record Type for any inbound web service calls</description>
    <label>INBOUND</label>
</RecordType>