unpackaged/main/default/objects/Integration_Log__c/recordTypes/OUTBOUND.recordType-meta.xml
<RecordType>
    <fullName>OUTBOUND</fullName>
    <active>true</active>
    <description>Record Type for any outbound web service calls</description>
    <label>OUTBOUND</label>
</RecordType>