unpackaged/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Id__c</columns>
    <columns>Pay_Load__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Source_System__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>