unpackaged/main/default/objects/Integration_Log__c/listViews/Receipt_Sync_Logs.listView-meta.xml
<ListView>
    <fullName>Receipt_Sync_Logs</fullName>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>Pay_Load__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Source_System__c</columns>
    <columns>Target_System__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_Name__c</field>
        <operation>equals</operation>
        <value>sendDatatoAman</value>
    </filters>
    <label>Receipt Sync Logs</label>
</ListView>